--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/TransformerUI.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/TransformerUI.xaml
@@ -2,24 +2,22 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:VIENNAAddInWpfUserControls="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
-    Height="420" Width="478" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="Transformer Wizard" FontSize="11">
+    Height="308" Width="430" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="Transformer Wizard" FontSize="11">
     <Canvas Name="canvas">
     <DockPanel Margin="5,5,5,5">
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,10,5,5">
-            <Button KeyboardNavigation.TabIndex="9" HorizontalAlignment="Left" Height="23" Name="buttonTransform" Width="175" Click="buttonTransform_Click">_Transform</Button>
-            <Button KeyboardNavigation.TabIndex="10" HorizontalAlignment="Left" Height="23" Name="buttonClose" Width="75" Margin="30,0,0,0" Click="buttonClose_Click">_Close</Button>
+            <Button KeyboardNavigation.TabIndex="7" HorizontalAlignment="Left" Height="23" Name="buttonTransform" Width="75" Click="buttonTransform_Click">_Transform</Button>
+            <Button KeyboardNavigation.TabIndex="8" HorizontalAlignment="Left" Height="23" Name="buttonClose" Width="75" Margin="30,0,0,0" Click="buttonClose_Click">_Close</Button>
         </StackPanel>
-        <TextBox Name="textBoxStatus" DockPanel.Dock="Bottom" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Height="80" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap" />
-        <Label Margin="0,5,0,0" DockPanel.Dock="Bottom" Name="label2" Height="23"  HorizontalAlignment="Left">Status:</Label>
-        <StackPanel>
+       <StackPanel>
         <GroupBox Name="Source" Header="Source Libraries">
                 <StackPanel Orientation="Vertical">
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="230">DOCLibrary:</Label>
+                    <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200">DOCLibrary:</Label>
                     <ComboBox Height="23" Width="200" Name="comboBoxSourceDocLibrary" SelectionChanged="comboboxSourceDocLibrary_SelectionChanged" TabIndex="1" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="230">BIELibrary:</Label>
+                    <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200">BIELibrary:</Label>
                     <ComboBox Height="23" Width="200" Name="comboBoxSourceBIELibrary" SelectionChanged="comboBoxSourceBIELibrary_SelectionChanged" TabIndex="2" />
                 </StackPanel>
               </StackPanel>
@@ -27,32 +25,31 @@
         <GroupBox Header="Target Libraries" Name="Target">
                 <StackPanel Orientation="Vertical">
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="230">DOCLibrary:</Label>
+                    <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200">DOCLibrary:</Label>
                     <ComboBox Height="23" Width="200" Name="comboBoxTargetDocLibrary" SelectionChanged="comboBoxTargetDocLibrary_SelectionChanged" TabIndex="3" />
                 </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                        <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="230">BIELibrary:</Label>
+                        <Label Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200">BIELibrary:</Label>
                         <ComboBox Height="23" Width="200" Name="comboBoxTargetBIELibrary" SelectionChanged="comboBoxTargetBIELibrary_SelectionChanged" TabIndex="4" />
                     </StackPanel>
                 </StackPanel>
             </GroupBox>
-            <GroupBox Header="Output Settings" Name="OutputSettings" Width="446">
+            <GroupBox Header="Output Settings" Name="OutputSettings">
                 <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <Label Height="23" HorizontalAlignment="Left" Width="130">Target XSD:</Label>
+                    <Label Height="23" HorizontalAlignment="Left" Width="100">Target XSD:</Label>
                     <VIENNAAddInWpfUserControls:FileSelector KeyboardNavigation.TabIndex="5" Height="23" Name="targetXSD"  FileNameChanged="targetXSD_FileNameChanged" Width="300" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
                 </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                        <Label Height="23" HorizontalAlignment="Left" Width="130">Output Directory:</Label>
+                        <Label Height="23" HorizontalAlignment="Left" Width="100">Output Directory:</Label>
                         <VIENNAAddInWpfUserControls:DirectorySelector KeyboardNavigation.TabIndex="6" Height="23" Name="OutputDirectory"  DirectoryNameChanged="OutputDirectory_DirectoryNameChanged" Width="300" />
                     </StackPanel>
-
                 </StackPanel>
             </GroupBox>
         </StackPanel>
     </DockPanel>
         <Canvas Visibility="Collapsed" Name="innerCanvas" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
-            <Rectangle Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=innerCanvas, Path=ActualWidth}" Height="{Binding ElementName=innerCanvas, Path=ActualHeight}">
+            <Rectangle Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=innerCanvas, Path=ActualWidth}" Height="268.83">
                 <Rectangle.Fill>
                     <SolidColorBrush Color="Gray" Opacity="0.75"/>
                 </Rectangle.Fill>
