--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/ExporterForm.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/ExporterForm.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:VIENNAAddInWpfUserControls="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
-    Height="490" Width="478" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="XML Schema Exporter Wizard" FontSize="11">
+    Height="490" Width="478" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="Exporter" FontSize="11">
     <DockPanel Margin="5,5,5,5">
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,10,5,5">
             <Button KeyboardNavigation.TabIndex="9" HorizontalAlignment="Left" Height="23" Name="buttonExport" Width="175" Click="buttonExport_Click">_Export XML Schema</Button>
